make sense example

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,5 +1,12 @@
-<link rel="stylesheet" href="css/app.css"/>
+<html>
+<head>
+    <title>svh example</title>
+    <link rel="stylesheet" href="css/app.css"/>
+</head>
 <body>
-<h1>Hello World!</h1>
+<div>
+    <h1>Hello World!</h1>
+</div>
 <script src="js/app.js"></script>
 </body>
+</html>
