--- a/examples/index.html
+++ b/examples/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
-    <title>svh example</title>
+    <title>svh - node serve here</title>
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
-<div>
-    <h1>Hello World!</h1>
-</div>
+<header>
+    <h1>Stay Focus!</h1><cite>-- Successful People Said</cite>
+</header>
+<div></div
 <script src="js/app.js"></script>
 </body>
 </html>
